--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.gitignore
+misc.xml
+modules.xml
+ostAlpha.iml
+vcs.xml
+workspace.xml
